@@ -13,6 +13,7 @@
 	* YAFM for dragons sitting on objects (based on work by Jordan DeLong - see bilious.alt.org/?193)
 	* Improved Beartraps 1.0 by Malcolm Ryan ( http://bilious.alt.org/?143 )
 	* Better zoos and courtrooms by "L" (Leon Arnott) ( http://l.j-factor.com/nethack/mkroom.diff )
+	* Blessed dunce caps and helms of opposite alignment will unbless (instead of turning into cursed) when worn by a player, based on http://l.j-factor.com/nethack/c-dunce.diff (by "L" - Leon Arnott)
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
